--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Hello!</h1>
     <h2>Ping - Pong</h2>
+    <p id="recent"></p>
+    <script src="index.js"></script>
 </body>
 </html>
