--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <h1>Hello!</h1>
     <h2>Ping - Pong</h2>
     <p id="recent"></p>
+    <button id="boxAuth" onclick="getBoxCreds()">Box Login</button>
     <script src="index.js"></script>
 </body>
 </html>
