Gapi OOB migration and token revoke fix

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <h1>Hello!</h1>
-    <h2>Ping - Pong</h2>
+    <h2>Makerspace Queue Automator Panel</h2>
+    <p>Most recent submission:</p>
     <p id="recent"></p>
+    <p>Only login Box if you have access to the Makerspace folder and only login to google with the Makerspace account.</p>
     <button id="boxAuth" onclick="getBoxCreds()">Box Login</button>
+    <button id="gapiAuth" onclick="getGapiCreds()">Google Login</button>
     <script src="index.js"></script>
 </body>
 </html>
