Added repo link

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <p>Only login Box if you have access to the Makerspace folder and only login to google with the Makerspace account.</p>
     <button id="boxAuth" onclick="getBoxCreds()">Box Login</button>
     <button id="gapiAuth" onclick="getGapiCreds()">Google Login</button>
+    <br>
+    <br>
+    <a href="https://github.com/ThatLittleChicken/MakerspaceQueue">Github Repo</a>
     <script src="index.js"></script>
 </body>
 </html>
